rust/libs/shared/macros/tests/ui/macro_fail.stderr
error: Function must have exactly one parameter
 --> tests/ui/macro_fail.rs:4:1
  |
4 | #[stream_worker]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `stream_worker` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Function must have exactly one parameter
  --> tests/ui/macro_fail.rs:10:1
   |
10 | #[stream_worker]
   | ^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `stream_worker` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Function must return Result<OutputType, ErrorType>
  --> tests/ui/macro_fail.rs:19:1
   |
19 | #[stream_worker]
   | ^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `stream_worker` (in Nightly builds, run with -Z macro-backtrace for more info)
